kubernetes/apps/security/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  hostnames:
    - authentik.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
